--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,16 @@
     "axios": "^1.8.3",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
+    "prism-react-renderer": "^2.4.1",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.3.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.3.0",
+    "react-swipeable": "^7.0.2",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
